--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,10 @@
     filter: invert(0.5);
     row-gap: 20px;
   }
+
+  .video {
+    position: fixed;
+    top: 60%;
+    right: 20px;
+    margin-bottom: 20%;
+  }
