--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,8 @@ body {
 
 }
 
+
+
 .box {
   background: url('./assets/line2.png');
 
@@ -50,3 +52,15 @@ body {
   @apply max-lg:before:absolute max-lg:before:-right-64 max-lg:before:top-2/5 max-lg:before:h-[440px] max-lg:before:w-[252px] max-lg:before:bg-black max-lg:before:blur-[200px] max-lg:before:content-[''];
 }
 
+
+.pricing-head_btn {
+  @apply relative z-2 h-16 flex-1 uppercase font-normal font-poppins text-white  transition-colors duration-500;
+}
+
+.pricing-head_btn_before {
+  @apply before:absolute before:-top-5 before:w-full before:left-0 before:right-9 before:bg-blue  before:content-[""];
+}
+
+.scroll-hide::-webkit-scrollbar {
+  display: none;
+}
