--- a/src/index.css
+++ b/src/index.css
@@ -39,10 +39,16 @@ body {
 
 }
 
+.g4 {
+  background: linear-gradient(270deg, rgba(217, 217, 217, 0) 0%, #D9D9D9 49%, rgba(217, 217, 217, 0) 100%);
+
+}
+
 .box {
   background: url('./assets/line2.png');
 
 }
+
 
 .icon {
   background: linear-gradient(225deg, #673AB7 0%, #3A00A2 100%);
